2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Adapt to recent changes.
	* src/BasicUtils.py (update_empty): Clean up callback.
	* src/GrampsDb/_ReadGedcom.py: Clean up callback.
	* src/GrampsDb/_GrampsDbBase.py (DbState.change_database_noclose):
	Add new method.
	* src/Makefile.am (gdir_PYTHON): Ship new file.
	* src/DbLoader.py: add new module.
	* src/ViewManager.py: Use DbLoader.
	* src/DisplayState.py (load): Do not perform post_load tasks.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): close if
	version is incopmatible.

2006-05-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: remove place name storage
	* src/Editors/_EditLdsOrd.py: new SelectPlace interface
	* src/glade/gramps.glade: new select place interface changes
	* src/Editors/_EditPlace.py: new SelectPlace interface
	* src/Editors/_EditEventRef.py: new SelectPlace interface, remove
	old code
	* src/Editors/_EditEvent.py: new SelectPlace interface
	* src/GrampsWidgets.py: new Place editor interface

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsWidgets.py (LinkLabel.__init__): Set cursor to HAND1.

2006-05-17  Stefan Bjork  <betula@users.sourceforge.net>
	* po/sv.po: Imported from CVS and merged with gramps.pot.

2006-05-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/glade/gramps.glade, 
	* src/TipOfDay.py: Use a gtk.Window instead of a Dialog to work
	around the "Button not clickable again" gtk-bug. (closes #0000033)

2006-05-16  Alex Roitman  <shura@gramps-project.org>
	* src/glade/gramps.glade (select_person): Name the box.
	* src/DataViews/_MediaView.py (row_change): Collect garbage on the
	row change.
	* src/Editors/_EditLdsOrd.py: Adapt to new selector.
	* src/DisplayTabs/_SourceEmbedList.py: Adapt to new selector.
	* src/DisplayTabs/_EventEmbedList.py: Adapt to new selector.
	* src/DisplayTabs/_GalleryTab.py: Adapt to new selector.
	* src/Selectors/_BaseSelector.py: Use DisplaModel models;