@@ -26,6 +26,7 @@
 #
 #-------------------------------------------------------------------------
 from cStringIO import StringIO
+from gettext import gettext as _
 
 #-------------------------------------------------------------------------
 #
