@@ -25,7 +25,6 @@
 # Standard python modules
 #
 #-------------------------------------------------------------------------
-import sets
 from gettext import gettext as _
 
 #-------------------------------------------------------------------------
@@ -43,7 +42,6 @@ import gtk.glade
 #-------------------------------------------------------------------------
 import Config
 import DateHandler
-import GrampsDisplay
 import ManagedWindow
 from GrampsWidgets import *
 
@@ -59,8 +57,6 @@ _surname_styles = [
     _("Combination of mother's and father's surname"),
     _("Icelandic style"),
     ]
-
-_pallette = "#fce94f:#edd400:#c4a000:#facf3e:#f57900:#ce5c00:#e9b96e:#c17d11:#8f5902:#8ae234:#73d216:#4e9a06:#729fcf:#3465a4:#204a87:#ad7fa8:#7ff07b:#5c3566:#ef2929:#cc0000:#a40000"
 
 def set_calendar_date_format():
     format_list = DateHandler.get_date_formats()
@@ -320,7 +316,4 @@ class GrampsPreferences(ManagedWindow.ManagedWindow):
     def build_menu_names(self,obj):
         return (_('Preferences'),None)
 
-if __name__ == "__main__":
-    GrampsPreferences(None,None)
-    gtk.main()
 
